# content

./: .gitignore  README.md
.ai/: agents.md  coding-style.md
docs/: ai_recommendation_architecture.md  data_collection_strategy.md  getting_started.md  roadmap.md
docs/Project_Overview/: project_roadmap.md
docs/Project_Overview/detail/: data_collection_strategy.md  text_embedding_extraction.md  text_processing.md
docs/Testing/: pre-poc-test.md
docs/architecture/: ai_recommendation_system_architecture.md  system-design.md
docs/features/: feature-template.md  recommendation.md
docs/requirements/: prd.md
docs/test/: poc-test.md
embedding-api/: pyproject.toml
embedding-api/app/: main.py
embedding-api/app/api/: dependency.py  pipeline.py  router.py  search.py
embedding-api/app/api/diag/: chroma.py  sqlite.py
embedding-api/app/api/endpoints/: search.py
embedding-api/app/api/endpoints/diag/: chroma.py  sqlite.py
embedding-api/app/core/: config.py  database.py
embedding-api/app/repositories/: chroma_repository.py  embedding.py  embedding_repository.py  sqlite_repository.py
embedding-api/app/schemas/: embedding.py  embedding_repository.py  search.py
embedding-api/app/services/: embedding.py  text_processing.py
embedding-api/app/services/diag/: chroma_service.py  sqlite_service.py
poc/: rag_test.py
test/: poc_test.py
