[project]
name = "embedding-api"
version = "0.1.0"
description = ""
authors = [
    {name = "sihyunjojo",email = "si4018@naver.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "chromadb-client (>=1.5.9,<2.0.0)",
    "playwright (>=1.45.0,<2.0.0)" # Playwright 의존성 추가
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
